# blackjack-card-counter

./: .gitignore  CMakeLists.txt  build.sh  build_debug.sh  generate_sample.py  gian_run.sh  predict_video.py  run.sh  run_filter.sh  stats_test_run.sh  testGian.sh  test_model.py  train_yolo.py
DL_approach/: export_to_onnx.py  predict_video.py  prepare_single_cards_dataset.py  prepare_video_dataset.py  stratified_split.py  test_yolo_single_cards.py  test_yolo_videos.py  train_yolo.py
DL_approach/datasets/cards_stratified/: data.yaml
DL_approach/datasets/cards_stratified/test/: labels.cache
DL_approach/datasets/cards_stratified/test/labels/: 10C20.txt  10C25.txt  10C46.txt  10C47.txt  10C5.txt  10C8.txt  10D1.txt  10D10.txt  10D19.txt  10D37.txt  10D42.txt  10D51.txt  10H16.txt  10H20.txt  10H38.txt  10H42.txt  10H5.txt  10H51.txt  10S11.txt  10S12.txt  10S21.txt  10S46.txt  10S49.txt  10S51.txt  2C12.txt  2C2.txt  2C38.txt  2C4.txt  2C44.txt  2C6.txt  2D16.txt  2D2.txt  2D26.txt  2D34.txt  2D48.txt  2D6.txt  2H23.txt  2H34.txt  2H38.txt  2H40.txt  (+279 more)
DL_approach/datasets/cards_stratified/train/: labels.cache
DL_approach/datasets/cards_stratified/train/labels/: 10C0.txt  10C1.txt  10C10.txt  10C11.txt  10C12.txt  10C13.txt  10C14.txt  10C16.txt  10C18.txt  10C19.txt  10C2.txt  10C21.txt  10C22.txt  10C24.txt  10C26.txt  10C27.txt  10C28.txt  10C3.txt  10C30.txt  10C31.txt  10C32.txt  10C33.txt  10C34.txt  10C35.txt  10C39.txt  10C4.txt  10C40.txt  10C41.txt  10C42.txt  10C43.txt  10C44.txt  10C50.txt  (+1874 more)
DL_approach/datasets/cards_stratified/val/: labels.cache
DL_approach/datasets/video_test/: data.yaml
DL_approach/datasets/video_test/test/: labels.cache
DL_approach/runs/detect/train/: args.yaml  events.out.tfevents.1763569012.DESKTOP-Linux-Mint.12151.0
DL_approach/runs/detect/train2/: args.yaml  events.out.tfevents.1763569156.DESKTOP-Linux-Mint.12637.0  results.csv
Dataset/Annotations/Annotations/: 10C1.xml  10C11.xml  10C13.xml  10C15.xml  10C18.xml  10C20.xml  10C24.xml  10C29.xml  10C31.xml  10C32.xml  10C4.xml  10C44.xml  10C45.xml  10C46.xml  10C51.xml  10C6.xml  10D14.xml  10D16.xml  10D17.xml  10D19.xml  10D2.xml  10D20.xml  10D24.xml  10D25.xml  10D27.xml  10D32.xml  10D37.xml  10D40.xml  10D41.xml  10D42.xml  10D43.xml  10D44.xml  10D50.xml  10H1.xml  10H11.xml  10H15.xml  10H19.xml  10H22.xml  10H23.xml  10H27.xml  (+1112 more)
Dataset/YOLO_Annotations/YOLO_Annotations/: 10C1.txt  10C12.txt  10C13.txt  10C17.txt  10C19.txt  10C2.txt  10C20.txt  10C22.txt  10C23.txt  10C31.txt  10C33.txt  10C37.txt  10C38.txt  10C39.txt  10C42.txt  10C43.txt  10C44.txt  10C46.txt  10C49.txt  10C6.txt  10C8.txt  10C9.txt  10D1.txt  10D12.txt  10D13.txt  10D14.txt  10D15.txt  10D18.txt  10D20.txt  10D24.txt  10D29.txt  10D30.txt  10D31.txt  10D33.txt  10D37.txt  10D44.txt  10D47.txt  10D51.txt  10D7.txt  10H1.txt  (+843 more)
DatasetLabels/labels/: Image10.txt  Image11.txt  Image2.txt  Image3.txt  Image5.txt  Image6.txt  Image7.txt  Image8.txt  Image9.txt
build_local/: CMakeCache.txt  Makefile  cmake_install.cmake  main
code/include/: CardProjection.h  CardType.h  Dataset.h  FeatureContainer.h  FeatureDescriptorAlgorithm.h  ImageFilter.h  ImageInfo.h  Label.h  Loaders.h  ObjectType.h  StatisticsCalculation.h  Utils.h  VideoWriter.h
code/include/Dataset/: Dataset.h  ImageDataset.h  TemplateDataset.h  VideoDataset.h
code/include/SampleInfo/: FrameInfo.h  ImageInfo.h  SampleInfo.h  TemplateInfo.h
code/include/card_detector/: CardDetector.h  RoughCardDetector.h  SequentialCardDetector.h  SingleCardDetector.h
code/include/card_detector/ObjectDetector/: ObjectDetector.h
code/include/card_detector/objectClassifiers/: ObjectClassifier.h
code/include/card_detector/objectDetector/: ObjectDetector.h
code/include/card_detector/objectSegmenters/: DistanceTransformCardSegmenter.h  MultipleCardSegmenter.h  MultipleCardSegmenter2.h  MultipleCardSegmenter3.h  ObjectSegmenter.h  SimpleContoursCardSegmenter.h
code/include/detection/: CardTracker.h  ProcessingMode.h  SequentialFrameProcessing.h  SingleFrameProcessing.h
code/include/detection/card_detector/: CardDetector.h  CardProjection.h  MaskCardDetector.h  SegmentationClassificationCardDetector.h  YoloCardDetector.h
code/include/features/: Feature.h  FeatureContainer.h  KeypointFeature.h
code/src/: CardProjection.cpp  CardType.cpp  Dataset.cpp  FeatureContainer.cpp  ImageFilter.cpp  Loaders.cpp  ObjectType.cpp  StatisticsCalculation.cpp  Utils.cpp  VideoWriter.cpp  main copy.cpp  main.cpp  mainGian.cpp  main_filter.cpp
code/src/Dataset/: ImageDataset.cpp  TemplateDataset.cpp  VideoDataset.cpp
code/src/card_detector/: CardDetector.cpp  CardProjection.cpp  RoughCardDetector.cpp  SequentialCardDetector.cpp  SingleCardDetector.cpp
code/src/card_detector/objectClassifiers/: ObjectClassifier.cpp
code/src/card_detector/objectDetector/: ObjectDetector.cpp
code/src/card_detector/objectSegmenters/: DistanceTransformCardSegmenter.cpp  MultipleCardSegmenter.cpp  MultipleCardSegmenter2.cpp  MultipleCardSegmenter3.cpp  ObjectSegmenter.cpp  SimpleContoursCardSegmenter.cpp
code/src/detection/: CardTracker.cpp  ProcessingMode.cpp  SequentialFrameProcessing.cpp  SingleFrameProcessing.cpp
code/src/detection/card_detector/: CardDetector.cpp  CardProjection.cpp  MaskCardDetector.cpp  SegmentationClassificationCardDetector.cpp  YoloCardDetector.cpp
code/src/features/: FeatureContainer.cpp
code/test/: testStatsCalculation.cpp
data/datasets/single_cards/: annotation.json
data/datasets/videos/: BlackjackLabelsSegmentation.json  classes.txt  notes.json
data/datasets/videos/labels/: Image1.txt  Image10.txt  Image11.txt  Image12.txt  Image2.txt  Image3.txt  Image4.txt  Image6.txt  Image7.txt
dataset/: BlackjackLabels.json  classes.txt
dataset/labels/: Image8.txt  Image9.txt
datasetTest/: noteLabels.txt
docs/: Class_diagram.drawio
output/yolo_train_results/yolo11s_cards/: args.yaml
output/yolo_train_results/yolo11s_cards2/: args.yaml  results.csv
output/yolo_train_results/yolo11s_cards3/: args.yaml  results.csv
src/: main.cpp
(+4063 files in other folders)
